--- a/app/_locales/el/detailed-description.txt
+++ b/app/_locales/el/detailed-description.txt
@@ -1,5 +1,3 @@
-GitHub DeepWiki (Unofficial)
-
 Αυτή η επέκταση προγράμματος περιήγησης προσθέτει ένα βολικό κουμπί "DeepWiki" στις σελίδες αποθετηρίων του GitHub, επιτρέποντάς σας να έχετε γρήγορη πρόσβαση στην τεκμηρίωση του αποθετηρίου στο DeepWiki.
 
 Χαρακτηριστικά:
@@ -22,3 +20,7 @@ GitHub DeepWiki (Unofficial)
 - Καμία παρακολούθηση
 - Δεν απαιτείται έλεγχος ταυτότητας
 - Απαιτείται μόνο πρόσβαση στο github.com για την προσθήκη του κουμπιού
+
+Ο πηγαίος κώδικας είναι επίσης διαθέσιμος και μπορείτε να τον δημιουργήσετε και να τον εγκαταστήσετε μόνοι σας.
+Για περισσότερες λεπτομέρειες, επισκεφθείτε:
+https://github.com/yamadashy/github-deepwiki
