--- a/app/_locales/ja/detailed-description.txt
+++ b/app/_locales/ja/detailed-description.txt
@@ -20,3 +20,7 @@
 - トラッキングなし
 - 認証不要
 - ボタン追加のためのgithub.comへのアクセス権限のみ必要
+
+ソースコードも公開されており、ご自身でビルド・インストールすることも可能です。
+詳しくは以下をご覧ください：
+https://github.com/yamadashy/github-deepwiki
