--- a/app/_locales/ru/detailed-description.txt
+++ b/app/_locales/ru/detailed-description.txt
@@ -1,5 +1,3 @@
-GitHub DeepWiki (Unofficial)
-
 Это расширение для браузера добавляет удобную кнопку "DeepWiki" на страницы репозиториев GitHub, позволяя быстро получить доступ к документации репозитория на DeepWiki.
 
 Возможности:
@@ -22,3 +20,7 @@ GitHub DeepWiki (Unofficial)
 - Нет отслеживания
 - Не требуется аутентификация
 - Требуется доступ только к github.com для добавления кнопки
+
+Исходный код также доступен, и вы можете самостоятельно собрать и установить расширение.
+Подробнее см. по адресу:
+https://github.com/yamadashy/github-deepwiki
