--- a/app/_locales/en/detailed-description.txt
+++ b/app/_locales/en/detailed-description.txt
@@ -1,5 +1,3 @@
-GitHub DeepWiki (Unofficial)
-
 This browser extension adds a convenient "DeepWiki" button to GitHub repository pages, allowing you to quickly access the repository's documentation on DeepWiki.
 
 Features:
@@ -22,3 +20,7 @@ Privacy:
 - No tracking
 - No authentication required
 - Only requires access to github.com to add the button
+
+The source code is also available, and you can build and install it yourself.
+For more details, please visit:
+https://github.com/yamadashy/github-deepwiki
