--- a/app/_locales/ko/detailed-description.txt
+++ b/app/_locales/ko/detailed-description.txt
@@ -1,5 +1,3 @@
-GitHub DeepWiki (Unofficial)
-
 이 브라우저 확장 프로그램은 GitHub 저장소 페이지에 편리한 "DeepWiki" 버튼을 추가하여 DeepWiki에서 저장소의 문서에 빠르게 접근할 수 있게 해줍니다.
 
 기능:
@@ -22,3 +20,7 @@ GitHub DeepWiki (Unofficial)
 - 추적 없음
 - 인증 불필요
 - 버튼 추가를 위해 github.com 접근만 필요
+
+소스 코드도 공개되어 있으며, 직접 빌드하여 설치할 수 있습니다.
+자세한 내용은 다음을 방문하세요:
+https://github.com/yamadashy/github-deepwiki
