--- a/app/_locales/pt_BR/detailed-description.txt
+++ b/app/_locales/pt_BR/detailed-description.txt
@@ -1,5 +1,3 @@
-GitHub DeepWiki (Unofficial)
-
 Esta extensão do navegador adiciona um conveniente botão "DeepWiki" às páginas de repositórios do GitHub, permitindo que você acesse rapidamente a documentação do repositório no DeepWiki.
 
 Recursos:
@@ -22,3 +20,7 @@ Privacidade:
 - Sem rastreamento
 - Sem necessidade de autenticação
 - Requer apenas acesso ao github.com para adicionar o botão
+
+O código-fonte também está disponível, e você pode compilá-lo e instalá-lo por conta própria.
+Para mais detalhes, visite:
+https://github.com/yamadashy/github-deepwiki
