style: add emoji to section headers in all detailed-description.txt files

--- a/app/_locales/de/detailed-description.txt
+++ b/app/_locales/de/detailed-description.txt
@@ -1,26 +1,26 @@
 Diese Browser-Erweiterung fügt GitHub-Repository-Seiten eine praktische "DeepWiki"-Schaltfläche hinzu, mit der Sie schnell auf die Dokumentation des Repositories in DeepWiki zugreifen können.
 
-Funktionen:
+🛠️ Funktionen:
 - Nahtlose Integration in die GitHub-Oberfläche
 - Ein-Klick-Zugriff auf DeepWiki für jedes GitHub-Repository
 - Klares und minimalistisches Design nach GitHub-UI-Mustern
 - Funktioniert auf allen GitHub-Repository-Seiten
 
-Verwendung:
+🚀 Verwendung:
 1. Installieren Sie die Erweiterung
 2. Navigieren Sie zu einem beliebigen GitHub-Repository
 3. Klicken Sie auf die Schaltfläche "In DeepWiki öffnen" im Repository-Header
 4. Sie werden zur entsprechenden DeepWiki-Seite weitergeleitet
 
-Hinweis:
+⚠️ Hinweis:
 Dies ist eine inoffizielle Erweiterung und steht in keiner Verbindung zu GitHub oder DeepWiki. Sie bietet lediglich eine bequeme Möglichkeit, zwischen GitHub-Repositories und den entsprechenden DeepWiki-Seiten zu navigieren.
 
-Datenschutz:
+🔒 Datenschutz:
 - Keine Datenerfassung
 - Kein Tracking
 - Keine Authentifizierung erforderlich
 - Benötigt nur Zugriff auf github.com, um die Schaltfläche hinzuzufügen
 
-Der Quellcode ist ebenfalls verfügbar und Sie können ihn selbst bauen und installieren.
+💻 Der Quellcode ist ebenfalls verfügbar und Sie können ihn selbst bauen und installieren.
 Weitere Informationen finden Sie unter:
 https://github.com/yamadashy/github-deepwiki
