--- a/app/_locales/el/detailed-description.txt
+++ b/app/_locales/el/detailed-description.txt
@@ -1,26 +1,26 @@
 Αυτή η επέκταση προγράμματος περιήγησης προσθέτει ένα βολικό κουμπί "DeepWiki" στις σελίδες αποθετηρίων του GitHub, επιτρέποντάς σας να έχετε γρήγορη πρόσβαση στην τεκμηρίωση του αποθετηρίου στο DeepWiki.
 
-Χαρακτηριστικά:
+🛠️ Χαρακτηριστικά:
 - Ομαλή ενσωμάτωση με τη διεπαφή του GitHub
 - Πρόσβαση με ένα κλικ στο DeepWiki για οποιοδήποτε αποθετήριο GitHub
 - Καθαρός και μινιμαλιστικός σχεδιασμός ακολουθώντας τα πρότυπα διεπαφής του GitHub
 - Λειτουργεί σε όλες τις σελίδες αποθετηρίων του GitHub
 
-Τρόπος χρήσης:
+🚀 Τρόπος χρήσης:
 1. Εγκαταστήστε την επέκταση
 2. Πλοηγηθείτε σε οποιοδήποτε αποθετήριο GitHub
 3. Κάντε κλικ στο κουμπί "Άνοιγμα στο DeepWiki" στην κεφαλίδα του αποθετηρίου
 4. Θα ανακατευθυνθείτε στην αντίστοιχη σελίδα του DeepWiki
 
-Σημείωση:
+⚠️ Σημείωση:
 Αυτή είναι μια ανεπίσημη επέκταση και δεν συνδέεται με το GitHub ή το DeepWiki. Απλώς παρέχει έναν βολικό τρόπο πλοήγησης μεταξύ των αποθετηρίων GitHub και των αντίστοιχων σελίδων DeepWiki.
 
-Απόρρητο:
+🔒 Απόρρητο:
 - Καμία συλλογή δεδομένων
 - Καμία παρακολούθηση
 - Δεν απαιτείται έλεγχος ταυτότητας
 - Απαιτείται μόνο πρόσβαση στο github.com για την προσθήκη του κουμπιού
 
-Ο πηγαίος κώδικας είναι επίσης διαθέσιμος και μπορείτε να τον δημιουργήσετε και να τον εγκαταστήσετε μόνοι σας.
+💻 Ο πηγαίος κώδικας είναι επίσης διαθέσιμος και μπορείτε να τον δημιουργήσετε και να τον εγκαταστήσετε μόνοι σας.
 Για περισσότερες λεπτομέρειες, επισκεφθείτε:
 https://github.com/yamadashy/github-deepwiki
