--- a/app/_locales/ja/detailed-description.txt
+++ b/app/_locales/ja/detailed-description.txt
@@ -1,26 +1,26 @@
 この拡張機能は、GitHubのリポジトリページに「DeepWiki」ボタンを追加し、DeepWikiのドキュメントページへ簡単にアクセスできるようにします。
 
-主な機能：
+🛠️ 主な機能：
 - GitHubのインターフェースにシームレスに統合
 - あらゆるGitHubリポジトリからワンクリックでDeepWikiにアクセス
 - GitHubのUIデザインに準拠したクリーンで最小限のデザイン
 - すべてのGitHubリポジトリページで動作
 
-使い方：
+🚀 使い方：
 1. 拡張機能をインストール
 2. GitHubの任意のリポジトリページに移動
 3. リポジトリヘッダーの「DeepWikiで開く」ボタンをクリック
 4. 対応するDeepWikiページにリダイレクトされます
 
-注意事項：
+⚠️ 注意事項：
 この拡張機能は非公式のものであり、GitHubやDeepWikiとは提携していません。GitHubリポジトリと対応するDeepWikiページの間を簡単に行き来できるようにするためのツールです。
 
-プライバシー：
+🔒 プライバシー：
 - データ収集なし
 - トラッキングなし
 - 認証不要
 - ボタン追加のためのgithub.comへのアクセス権限のみ必要
 
-ソースコードも公開されており、ご自身でビルド・インストールすることも可能です。
+💻 ソースコードも公開されており、ご自身でビルド・インストールすることも可能です。
 詳しくは以下をご覧ください：
 https://github.com/yamadashy/github-deepwiki
