--- a/app/_locales/nl/detailed-description.txt
+++ b/app/_locales/nl/detailed-description.txt
@@ -1,26 +1,26 @@
 Deze browserextensie voegt een handige "DeepWiki"-knop toe aan GitHub repository-pagina's, waarmee je snel toegang krijgt tot de documentatie van de repository op DeepWiki.
 
-Functies:
+🛠️ Functies:
 - Naadloze integratie met de GitHub-interface
 - Één-klik toegang tot DeepWiki voor elke GitHub repository
 - Strak en minimalistisch ontwerp volgens GitHub UI-patronen
 - Werkt op alle GitHub repository-pagina's
 
-Gebruik:
+🚀 Gebruik:
 1. Installeer de extensie
 2. Navigeer naar een GitHub repository
 3. Klik op de "Open in DeepWiki"-knop in de repository header
 4. Je wordt doorgestuurd naar de bijbehorende DeepWiki-pagina
 
-Opmerking:
+⚠️ Opmerking:
 Dit is een niet-officiële extensie en is niet gelieerd aan GitHub of DeepWiki. Het biedt simpelweg een handige manier om te navigeren tussen GitHub repositories en hun bijbehorende DeepWiki-pagina's.
 
-Privacy:
+🔒 Privacy:
 - Geen gegevensverzameling
 - Geen tracking
 - Geen authenticatie vereist
 - Heeft alleen toegang nodig tot github.com om de knop toe te voegen
 
-De broncode is ook beschikbaar en je kunt deze zelf bouwen en installeren.
+💻 De broncode is ook beschikbaar en je kunt deze zelf bouwen en installeren.
 Voor meer informatie, bezoek:
 https://github.com/yamadashy/github-deepwiki
