--- a/app/_locales/ru/detailed-description.txt
+++ b/app/_locales/ru/detailed-description.txt
@@ -1,26 +1,26 @@
 Это расширение для браузера добавляет удобную кнопку "DeepWiki" на страницы репозиториев GitHub, позволяя быстро получить доступ к документации репозитория на DeepWiki.
 
-Возможности:
+🛠️ Возможности:
 - Плавная интеграция с интерфейсом GitHub
 - Доступ к DeepWiki в один клик для любого репозитория GitHub
 - Чистый и минималистичный дизайн, следующий паттернам интерфейса GitHub
 - Работает на всех страницах репозиториев GitHub
 
-Как использовать:
+🚀 Как использовать:
 1. Установите расширение
 2. Перейдите на любой репозиторий GitHub
 3. Нажмите кнопку "Открыть в DeepWiki" в заголовке репозитория
 4. Вы будете перенаправлены на соответствующую страницу DeepWiki
 
-Примечание:
+⚠️ Примечание:
 Это неофициальное расширение и не связано с GitHub или DeepWiki. Оно просто предоставляет удобный способ навигации между репозиториями GitHub и их соответствующими страницами DeepWiki.
 
-Конфиденциальность:
+🔒 Конфиденциальность:
 - Нет сбора данных
 - Нет отслеживания
 - Не требуется аутентификация
 - Требуется доступ только к github.com для добавления кнопки
 
-Исходный код также доступен, и вы можете самостоятельно собрать и установить расширение.
+💻 Исходный код также доступен, и вы можете самостоятельно собрать и установить расширение.
 Подробнее см. по адресу:
 https://github.com/yamadashy/github-deepwiki
